- Fixed handling margins for timers that are not VPS controlled and not spawned (thanks
  to Markus Ehrnsperger).
- Added a header to the backtrace (thanks to Stefan Hofmann).
- Added parameter checks to strn0cpy() (thanks to Stefan Hofmann). Same for Utf8Strn0Cpy().
- The info files of recordings are now only re-read if they have been modified (thanks
  to Stefan Hofmann).
- The new virtual function cStatus::OsdItem2() can be used to get the information whether
  a menu item is selectable (thanks to Markus Ehrnsperger). Plugins that implemented
  cStatus::OsdItem() will still work as before, because the default implementation of
  cStatus::OsdItem2() calls cStatus::OsdItem().
  APIVERSNUM is now 30006.
- Fixed setting the file name of the info file after renaming a recording (reported by
  Stefan Hofmann).
- Fixed an improper call of cStatus::OsdCurrentItem() before cStatus::OsdItem2() (reported
  by Markus Ehrnsperger).
- Fixed an unnecessary redisplay of the menu when pressing a hotkey.
- Fixed unnecessary calls to DisplayCurrent() for editable menu items (thanks to Markus
  Ehrnsperger).
- The new virtual function cStatus::OsdCurrentItem2() can be used to get the index of the
  current menu item (thanks to Markus Ehrnsperger). Plugins that implemented
  cStatus::OsdCurrentItem() will still work as before, because the default implementation
  of cStatus::OsdCurrentItem2() calls cStatus::OsdCurrentItem().
- Fixed unnecessary calls to cStatus::OsdCurrentItem2() when scrolling.
- Added missing calls to cStatus::MsgOsdStatusMessage() and added the new virtual function
  cStatus::OsdStatusMessage2(), which can be used to get the type of the message (thanks
  to Markus Ehrnsperger). Plugins that implemented cStatus::OsdStatusMessage() will still
  work as before, because the default implementation of cStatus::OsdStatusMessage2() calls
  cStatus::OsdStatusMessage().
- Adjusted PLUGINS.html to the new API version numbering introduced in version 2.7.2.