@@ -10079,3 +10079,5 @@ Video Disk Recorder Revision History
   work as before, because the default implementation of cStatus::OsdStatusMessage2() calls
   cStatus::OsdStatusMessage().
 - Adjusted PLUGINS.html to the new API version numbering introduced in version 2.7.2.
+- The function cPlugin::MainThreadHook() has been deprecated and may be removed in future
+  versions. Use proper locking instead.
